# pcore-badapple

./: .gitignore  CMakeLists.txt  README.md  pcore-badapple.kdev4
include/: wav.h
src/: genaudio.c  gendata.c  mkimg.cc  playdat.cc  vga12.c
